# pid-regulator

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
core/: CMakeLists.txt  Regulator.c  Regulator.h  pidautotuner.c  pidautotuner.h
tests/autotune/: CMakeLists.txt  main.c
tests/native/: CMakeLists.txt  main.c
tests/regulate/: CMakeLists.txt  main.c
tools/: build_tests.sh
